# splatrix

./: .cursorrules  .gitignore  FIX_DATAPARSER_PATH_FINAL.md  FIX_TRANSFORMS_PATH_EXPORT.md  FIX_VIDEO_PATH_PERSISTENCE.md  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  requirements.txt  run.py  run_qml.py  uninstall.sh
.github/workflows/: pages.yml
docs/: ARCHITECTURE.md  CHANGELOG_GRANULAR_STAGES.md  CHANGELOG_REMOVE_GLOBAL_PROGRESS.md  CHANGELOG_VIDEO_PROCESSORS.md  CUDA_SETUP_FIX.md  DEBUG_FEATURE_EXTRACTION.md  DEBUG_TRAINING_UI_UPDATE.md  DIRECT_EXPORT_SOLUTION.md  FIX_CANCEL_BUTTON.md  FIX_CHECKPOINT_EXPORT.md  FIX_EXPORT_WARNINGS.md  FIX_GSPLAT_LINK_ERROR.md  FIX_MAX_FRAMES_PARAMETER.md  FIX_OLD_CONFIG_PATH.md  FIX_STDERR_CAPTURE.md  FIX_TIMESTAMP_PLACEHOLDER.md  FIX_TRANSFORMS_JSON_NOT_FOUND.md  FIX_VIDEO_INFO_PYAV.md  GPU_USAGE_INFO.md  INDEX.md  INSTALLATION_COMPLETE.md  NERFSTUDIO_SETUP.md  PLY_EXPORT_APPROACHES.md  READY_TO_USE.md  STAGE_TRACKING.md  SUBPROCESS_USAGE.md  TROUBLESHOOTING.md  UI_IMPROVEMENTS_TOTAL_COUNTS.md  VIDEO_PROCESSOR_ARCHITECTURE.md
resources/: icon.icns
splatrix/: __init__.py  app_controller.py  direct_ply_export.py  main_qml.py  main_window.py  nerfstudio_integration.py  nerfstudio_video_processor.py  ply_exporter.py  project_manager.py  pyav_video_processor.py  qml_bridge.py  reconstruction_pipeline.py
splatrix/qml/: IconButton.qml  SectionCard.qml  StageIndicator.qml  main.qml  qmldir
splats/: __init__.py  app_controller.py  direct_ply_export.py  main_qml.py  main_window.py  nerfstudio_integration.py  ply_exporter.py  project_manager.py  qml_bridge.py  video_processing_base.py  video_processor.py  worker_threads.py
splats/qml/: FramesTab.qml  Icon.qml  IconButton.qml  LogTab.qml  PipelineTab.qml  (+7 more)
web/: index.html  package-lock.json  package.json
website/: index.html  install.ps1  install.sh
(+10 files in other folders)
